clusters/homelab/namespaces/databases/postgres/allow-from-n8n.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-n8n
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: n8n
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: n8n
      ports:
      - protocol: TCP
        port: 5432
