clusters/homelab/namespaces/databases/postgres/allow-prometheus-scraping.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scraping
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: observability
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: prometheus
            app.kubernetes.io/instance: prometheus-prometheus
      ports:
      - protocol: TCP
        port: 9187
